2011-12-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList):
	  - Replace ASCII range checks with ctype.h functions.
	  - Replace TIS-620 range check with macro function.

2011-12-07  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Post-release version suffix added.
	* data/swathdic.lst: Remove a typo entry.

2011-03-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in, NEWS:
	=== Version 0.4.1 ===

2011-03-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Add AC_CONFIG_MACRO_DIR, as suggested by libtoolize.
	* Makefile.am: Add ACLOCAL_AMFLAGS, as suggested by libtoolize.

2011-03-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in, -swath.spec.in: Remove the outdated, unmaintained file.

2011-03-19  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.h (AbsWordSeg::Construct):
	  - Remove the remaining declaration of the removed method.

2011-03-19  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.cpp (AbsWordSeg::IsLeadChar, AbsWordSeg::IsLastChar):
	  - Simplify the methods.
	  - For IsLeadChar(), also exclude LAKKHANGYAO.
	* src/abswordseg.h, src/abswordseg.cpp
	  (AbsWordSeg::IsNumber, AbsWordSeg::IsEnglish, AbsWordSeg::Has_Karun):
	  - Make the methods accept const pointer as input.

2011-03-19  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Make class WordStack methods inline.

	* src/worddef.h (wordStateType):
	  - Simply name the struct type "wordState" and remove typedef'd type.
	  - Add c-tors for instantiation convenience.
	* src/wordstack.h (class WordStack):
	  - Replace "wordStateType" type with "wordState".
	  - Make all methods inline. They are all short functions.
	* src/Makefile.am, -src/wordstack.cpp:
	  - Remove the now-unused source file.
	* src/maxwordseg.cpp (MaxWordSeg::WordSegArea):
	* src/longwordseg.cpp (LongWordSeg::CreateSentence):