@@ -1,5 +1,10 @@
 2011-12-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	* src/abswordseg.cpp (AbsWordSeg::IsNumber, AbsWordSeg::IsEnglish):
+	  - Replace ASCII range checks with ctype.h functions.
+
+2011-12-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	* src/abswordseg.cpp (AbsWordSeg::CreateWordList):
 	  - Replace ASCII range checks with ctype.h functions.
 	  - Replace TIS-620 range check with macro function.
